syntax = "proto3";

package com.fanaujie.ripple.protobuf;

option java_multiple_files = true;
option java_package = "com.fanaujie.ripple.protobuf.push";

enum EventType {
  EVENT_TYPE_UNSPECIFIED = 0;
  EVENT_TYPE_SELF_INFO_UPDATE = 1;
  EVENT_TYPE_RELATION_UPDATE = 2;
}

message PushEventData {
  EventType event_type = 1;
  int64 send_user_id = 2;
  repeated int64 receive_user_ids = 3;
}

message PushMessage {
  oneof payload {
    PushEventData event_data = 1;
  }
}